fix dark dots visible on tab background while loading

--- a/plugins/c9.ide.layout.classic/themes/default-flat-light.less
+++ b/plugins/c9.ide.layout.classic/themes/default-flat-light.less
@@ -406,7 +406,7 @@
 @pane-button-shadow-right: -42px -123px; //-124px;
 
 @pane-button-active-shadow-opacity : 1;
-@pane-button-active-shadow-middle: 0 -1353px;
+@pane-button-active-shadow-middle: 0 50px;
 @pane-button-active-shadow-left: 0 -122px; //-123px;
 @pane-button-active-shadow-right: -42px -122px; //-123px;
 
